lab1/Test/L1-A-11-4.cmm
int R8uZdDBTwhhmmbAx 
;
struct {
  int llR4tt3 while ;
  struct H4APk1s {
    int q ;
  }pfhMKThAPn06 , PyWB_HO6 
};
int PFmQm2Q ( float HCMtRj57j3 ) {
  struct OAb X8fQwjS7HST [ 1658466215 ] = F || && 
    UcKHcPGaax4w_ZaOX == KLa9I5 * V ( Bkmg80Y , kjuvNFeBjewQKDr40 
    = fARGE57cy < h + X28SOjyC7q [ JQI0LT58fQ8bbpQRvm 
    = n7qMU4cmq && e99xFuoyVRsh >= RPYm2wv - ( p = GY91wgQ3KPlGyI 
    <= wF * uBARSY5unLC1fOje ( AbNEYPj01aDmBSOh , bi && 
    FOMvDoVS + n ( mCGdG6VF , SSHHccwLP04nnV = T = tJ55KHLsW5X 
    || YOyOTlB2SBzdRlhGB9F2 != qjlBb_R4VWjbLuFxejf ) / 
    1800060641.71759032 ) ) > _cZpo ] ) . higxjgIAMa / 
    ODRwb ( ) - ! - 59332593 ;
}|| 
int Wpc9qYOd , nW 

;
int 
int ;
int ;
int zMG7gE1yM8 ( ) {
  if ( u1zFnHjjLv0 )   return R1_haqAnRzAB_ ;

  while ( pcNi8GBGMLXeLw6RRmm )   JJirwFyd_KepkNrev 
    ;

}
int ;
int ] XMN91irXjd ( int TfC1lGUlpx , int ExSXEZ ) {
  if ( mrD1rNx )   DiQSY9HYbZjILNz5p0 ;
else   if ( VB7GXKKV ) {
    if ( qt6Wt7OMJ )     Silmxnaf5OzA9r ;
else     rpP7Wgqz3Nb ;

;  }

}
